--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/ferfer.html">ferfer recipe</a></li>
-        <li><a href="recipes/shero.html">shero recipe</a></li>
-        <li><a href="recipes/mesir.html">mesir recipe</a></li>
-    </ul>
+        <button><a href="recipes/ferfer.html">  <div> ferfer recipe</div> </a></button>
+        <button><a href="recipes/shero.html">  <div>  shero recipe </div>  </a></button>
+        <button><a href="recipes/mesir.html">  <div>  mesir recipe  </div> </a></button>  
+    <h3>choose foods from the above list to get the recipes.</h4>
+    <p>we give all the descriptions, ingredients and steps for each dishes listed on our site.
+        all recipes are provided by professional and well cultured chefs with a proper study and care.
+    </p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_Bjk1Cr9WyhbJaf-Q5Kpx3_INpyrYu7jrLg&usqp=CAU" alt="cultured cooking" class="center">
+ <footer id="footer">copyright &copy; all rights reserved || @habesharecipies, 2023 G.C.</footer>
 </body>
 </html>
