--- a/recipes/shero.html
+++ b/recipes/shero.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shero recipe</title>
+    <link rel="stylesheet" href="recipes.css">
 </head>
 <body>
     <h1>Shero recipe</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwaJ1a0-ruRgsDTZyCoxG2qjHDOsy6REqVcQ&usqp=CAU" alt="shero at it's finniest">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwaJ1a0-ruRgsDTZyCoxG2qjHDOsy6REqVcQ&usqp=CAU" alt="shero at it's finniest" class="center">
     <h3>Description</h3>
     <p>Shiro (Ge'ez: ሽሮ, romanized: šəro), also called shiro wat (Amharic: ሽሮ ወጥ, romanized: šəro wäṭ), or tsebhi shiro (Tigrinya: ጸብሒ ሽሮ, romanized: ṣäbhi šəro), is a stew served for either lunch or dinner, originating from Ethiopia and Eritrea.</p>
     <h3>Ingredients</h3>
