--- a/recipes/ferfer.html
+++ b/recipes/ferfer.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferfer recipe</title>
+    <link rel="stylesheet" href="recipes.css">
 </head>
 <body>
     <h1>Ferfer recipe</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWm9hkpfPhnflNtQ-A68utbJ0Z2MoR3q03ow&usqp=CAU" alt="ferfer at it's finniest">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWm9hkpfPhnflNtQ-A68utbJ0Z2MoR3q03ow&usqp=CAU" alt="ferfer at it's finniest" class="center">
     <h3>Description</h3>
     <p>Ferfer is a national dish of Ethiopia made from a small cut pieces of a local soft bread called <em>injera</em>. It needs 35-55 minutes of cook and serving time. it needs the following ingredients:</p>
     <h3>Ingredients</h3>
