fix hover and CSS

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-        <button><a href="recipes/ferfer.html">  <div> ferfer recipe</div> </a></button>
-        <button><a href="recipes/shero.html">  <div>  shero recipe </div>  </a></button>
-        <button><a href="recipes/mesir.html">  <div>  mesir recipe  </div> </a></button>  
+    <h1>Habesha recipes</h1>
+        <button class="but"><a href="recipes/ferfer.html">  <div> ferfer recipe</div> </a></button>
+        <button class="but"><a href="recipes/shero.html">  <div>  shero recipe </div>  </a></button>
+        <button class="but"><a href="recipes/mesir.html">  <div>  mesir recipe  </div> </a></button>  
     <h3>choose foods from the above list to get the recipes.</h4>
     <p>we give all the descriptions, ingredients and steps for each dishes listed on our site.
         all recipes are provided by professional and well cultured chefs with a proper study and care.
