--- a/recipes/mesir.html
+++ b/recipes/mesir.html
@@ -29,5 +29,7 @@
         <li> dd lentils and more water or stock as the lentils start to swell. Most red and yellow lentils are decorticated, which means the outer skin has been removed. Timeless Petite Crimson Lentils coo in 5 to 10 minutes. Keep adding water until they are done to your desired tenderness. </li>
         <li>Let lentils and broth cool, then puree them in a blender. The result is a creamy spicy soup that can be gently reheated with a little water or broth to thin, and served. If you prefer a chunky soup, leave it unblended and enjoy the texture of the lentils. </li>
     </ol>
+    <footer id="footer">copyright &copy; all rights reserved || @habesharecipies, 2023 G.C.</footer>
+
 </body>
 </html>
