--- a/recipes/ferfer.html
+++ b/recipes/ferfer.html
@@ -31,5 +31,6 @@
         <li> Stir 1/2 cup water, dried beef, and berbere seasoning into the saucepan. Reduce heat to medium and cook until flavors combine, about 10 minutes. Continue cooking, adding 1/3 cup water every few minutes, until beef is softened and sauce is thick, about 20 minutes. Stir in kibbeh and salt. </li>
         <li> Tear 1 injera into palm-sized pieces; fold gently into the sauce. Serve beef and sauce over whole injera. </li>
     </ol>
+    <footer id="footer">copyright &copy; all rights reserved || @habesharecipies, 2023 G.C.</footer>
 </body>
 </html>
