--- a/recipes/shero.html
+++ b/recipes/shero.html
@@ -27,5 +27,7 @@
         <li> Then, add the shiro powder, salt, and three cups of water. Bring this to a boil on medium heat, then turn the heat down and let the mixture simmer for 20 or 30 minutes (depends on the strength of the stove and the consistency you prefer!) Make sure to stir at five minute increments, so it doesn't stick. </li>
         <li> Serve hot with rice or injera (and stay tuned for my traditional and/or quick injera recipes!) </li>
     </ol>
+    <footer id="footer">copyright &copy; all rights reserved || @habesharecipies, 2023 G.C.</footer>
+
 </body>
 </html>
